# daily-bread

./: .gitignore  Cargo.toml  README.md
notes/: date.txt
src/: main.rs
