[package]
name = "daily-bread"
version = "0.1.1"
authors = ["Avery Harnish <averyharnish@gmail.com>"]
edition = "2018"
description = "A CLI tool that emails your notes and commit messages to you at the end of the day"
repository = "https://github.com/EverlastingBugstopper/daily-bread"
readme = "./README.md"
license-file = "./LICENSE"


[dependencies]
clap = "2.33.0"
chrono = "0.4.7"
directories = "2.0.2"
